// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlackList Reducer add watchlist fail 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": false,
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": false,
  "watchlistAddError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "watchlistAddPending": false,
}
`;

exports[`BlackList Reducer add watchlist pending 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": false,
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": false,
  "watchlistAddError": null,
  "watchlistAddPending": true,
}
`;

exports[`BlackList Reducer add watchlist success 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": false,
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": false,
  "watchlistAddError": null,
  "watchlistAddPending": false,
}
`;

exports[`BlackList Reducer delete monitor fail 1`] = `
Object {
  "deleteMonitorError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "deleteMonitorPending": false,
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer delete monitor pending 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": true,
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents fail 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": false,
  "incidents": Array [],
  "incidentsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents pending 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": false,
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": true,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list incidents success 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": false,
  "incidents": Object {
    "fakeData": true,
  },
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list monitors fail 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": false,
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "monitorsPending": false,
}
`;

exports[`BlackList Reducer list monitors pending 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": false,
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Array [],
  "monitorsError": null,
  "monitorsPending": true,
}
`;

exports[`BlackList Reducer list monitors success 1`] = `
Object {
  "deleteMonitorError": null,
  "deleteMonitorPending": false,
  "incidents": Array [],
  "incidentsError": null,
  "incidentsPending": false,
  "monitors": Object {
    "fakeData": true,
  },
  "monitorsError": null,
  "monitorsPending": false,
}
`;
